--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body {
     padding-top: 3%;
     margin: 5%;
     font-size: larger;
+    color: rgb(128, 88, 86);
   }
 
   .topImages{
@@ -138,15 +139,41 @@ body {
     border-radius: 25px;
     margin-left: 1%;
   }
-  
+
   #DIY{
     width: 38%;
     border-radius: 25px;
     flex-wrap: nowrap ;
 
-}
+  }
 
+  .experienceTitles{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    color: rgb(128, 88, 86);
+  }
+  .experienceBody{
+    display: flex;
+    flex-direction: row;
+  }
+  
+  #experienceDescrip{
+    color: rgb(128, 88, 86);
+  }
 
+  #experiencePara{
+    width: 100%;
+    color: rgb(128, 88, 86);
+  }
+
+  #blackGirlsCodeImg{
+    display: flex;
+    margin: auto;
+    width: 40%;
+    height: auto;
+  }
+  
 }
 
 
