--- a/style.css
+++ b/style.css
@@ -34,23 +34,26 @@ body {
   color: brown;
 }
 /* home */
-.container{
-  background-image: url("https://static.vecteezy.com/system/resources/previews/003/988/578/original/psychedelic-groovy-retro-background-vector.jpg")
+.index-container{
+  background-image: url(https://static.vecteezy.com/system/resources/previews/003/988/578/original/psychedelic-groovy-retro-background-vector.jpg);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 #main-title{
   font-size: larger;
   margin-top: 0px;
   font-weight: 300;
+  color: whitesmoke;
 }
 
 #my-name{
   font-size: xx-large;
   margin-top: 0px;
   letter-spacing: 5px;
+  color: whitesmoke;
 }
 
-#wavy-background{
-}
 /* home */
 
 /* bio */
@@ -124,6 +127,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     flex: 1;
     padding: 10px;
     color: rgb(128, 88, 86);
