--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@
   box-sizing: border-box;
 }
 body {
-  background-color: antiquewhite;
+  background-image: url(https://img.freepik.com/free-photo/beige-earth-tone-design-space-background_53876-102507.jpg?w=2000);
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 }
 
 .navbar{
@@ -33,6 +32,22 @@ body {
   color: brown;
   cursor: pointer;
 }
+
+.navbar a::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: aliceblue;
+  transition: width 0.25s ease-out;
+}
+
+.navbar a:hover::before{
+  width: 100%;
+}
+
 #active-page{
   color: brown;
   cursor: pointer;
@@ -221,8 +236,27 @@ body {
     font-size: x-large;
     cursor: pointer;
   }
-  
 }
+
+@media only screen and (min-width: 768px){
+  .portfolio-img{
+    max-width: 400px;
+  }
+
+  .porfolio-img-1024px{
+    display: flex;
+  }
+  
+  .porfolio-img-768px{
+    flex-direction: row-reverse;
+  }
+
+  .portfolio-images-text{
+    display: flex;
+    align-items: center;
+  }
+}
+
 @media only screen and (min-width: 769px){ 
   .navbar{
     font-weight: 300;
@@ -266,7 +300,7 @@ body {
     font-size: 70px;
   }
   .experience-main{
-    width: 77%;
+    width: 74%;
     margin: auto;
     font-size: 19px;
     flex-direction: row;
@@ -274,6 +308,7 @@ body {
   }
   .experience-main section {
     flex: 1;
+    margin: 0 5%;
   }
 
   #black-girls-code-background-img{
@@ -288,11 +323,12 @@ body {
   }
 
   .portfolio-main{
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
   }
   .porfolio-img-1024px{
-    max-width: 500px;
+    width: 70%;
+    margin: 1%;
   }
 }
   
