--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url(https://img.freepik.com/free-photo/beige-earth-tone-design-space-background_53876-102507.jpg?w=2000);
+  background-color: antiquewhite;
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .navbar{
